force-app/main/default/objects/Customer_Dashboard_Permission__c/Customer_Dashboard_Permission__c.object-meta.xml
<CustomObject>
    <label>Customer Dashboard Permission</label>
    <nameField>
        <label>Customer Dashboard Permission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Dashboard Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>