force-app/main/default/objects/Customer_Dashboard_Permission__c/fields/Customer_Dashboard_Setting__c.field-meta.xml
<CustomField>
    <fullName>Customer_Dashboard_Setting__c</fullName>
    <label>Customer Dashboard Setting</label>
    <referenceTo>Customer_Dashboard_Setting__c</referenceTo>
    <relationshipLabel>Customer Dashboard Permissions</relationshipLabel>
    <relationshipName>Customer_Dashboard_Permissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>