force-app/main/default/objects/Customer_Dashboard_Permission__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>18</length>
    <type>Text</type>
</CustomField>